[workspace]

members = [
    "common/arbgrid",
    "common/intcode",
    "2019/aoc_1901",
    "2019/aoc_1902",
    "2019/aoc_1903",
    "2019/aoc_1904",
    "2019/aoc_1905",
    "2019/aoc_1906",
    "2019/aoc_1907",
    "2019/aoc_1908",
    "2019/aoc_1909",
    "2019/aoc_1911",
    "2020",
    "2021"
]
