[package]
name = "jmerdich_aoc_22"
version = "0.1.0"
authors = ["Jake Merdich <jake@merdich.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
#aoc-runner = { git = "https://github.com/jmerdich/cargo-aoc", branch = "dev" }
aoc-runner-derive = "0.3.0"
#aoc-runner-derive = { path = "../../cargo-aoc/aoc-runner-derive"}
#aoc-runner-derive = { git = "https://github.com/jmerdich/cargo-aoc", branch = "dev" }
itertools = "0.10.3"
scan_fmt = "0.2.6"
